@@ -1,5 +1,12 @@
 2008-10-22  Cosimo Cecchi  <cosimoc@gnome.org>
 
+        Add license information in the about dialog (#501084).
+
+        * about.c:
+        (logview_about):
+
+2008-10-22  Cosimo Cecchi  <cosimoc@gnome.org>
+
         Fixup includes a bit.
 
         * about.c:
